--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ ul {
 .header-link {
   color: var(--first--link-color);
 
-  transition-property: fill;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -288,6 +288,7 @@ ul {
   font-size: 16px;
   line-height: 1.88;
   color: var(--hero-btn-text-color);
+  letter-spacing: 0.06em;
   background: var(--hero-btn-background-color);
   cursor: pointer;
 
